; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_11d.c_set_domain_info_11d.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_11d.c_set_domain_info_11d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lbs_private = type { i32 }

@.str = private unnamed_addr constant [36 x i8] c"dnld domain Info with 11d disabled\0A\00", align 1
@CMD_802_11D_DOMAIN_INFO = common dso_local global i32 0, align 4
@CMD_ACT_SET = common dso_local global i32 0, align 4
@CMD_OPTION_WAITFORRSP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"fail to dnld domain info\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lbs_private*)* @set_domain_info_11d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_domain_info_11d(%struct.lbs_private* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lbs_private*, align 8
  %4 = alloca i32, align 4
  store %struct.lbs_private* %0, %struct.lbs_private** %3, align 8
  %5 = load %struct.lbs_private*, %struct.lbs_private** %3, align 8
  %6 = getelementptr inbounds %struct.lbs_private, %struct.lbs_private* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 @lbs_deb_11d(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %23

11:                                               ; preds = %1
  %12 = load %struct.lbs_private*, %struct.lbs_private** %3, align 8
  %13 = load i32, i32* @CMD_802_11D_DOMAIN_INFO, align 4
  %14 = load i32, i32* @CMD_ACT_SET, align 4
  %15 = load i32, i32* @CMD_OPTION_WAITFORRSP, align 4
  %16 = call i32 @lbs_prepare_and_send_command(%struct.lbs_private* %12, i32 %13, i32 %14, i32 %15, i32 0, i32* null)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = call i32 @lbs_deb_11d(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %11
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %9
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @lbs_deb_11d(i8*) #1

declare dso_local i32 @lbs_prepare_and_send_command(%struct.lbs_private*, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
